# TabPFN-Distil

./: .gitignore  LICENSE  README.md  aug_dataset.py  benchmark_datasets.py  evaluate_xgboost.py  generate_distillation_tables.py  main.ipynb  main.py  mlp_distillation.ipynb  pyproject.toml  student_model.ipynb  syntetic_labels_graph.ipynb  synthetic_labels.ipynb  trees_distillation.ipynb
results/: distillation_tables.tex  mlp_distillation_64_dataset.csv  mlp_distillation_64_sum.csv  mlp_distillation_8_dataset.csv  mlp_distillation_8_sum.csv  student_model_02_dataset.csv  student_model_02_sum.csv  student_model_32_dataset.csv  student_model_32_sum.csv  student_model_64_dataset.csv  student_model_64_sum.csv  student_model_8_dataset.csv  student_model_8_sum.csv  synthetic_labels_4_dataset.csv  synthetic_labels_4_sum.csv  synthetic_labels_64_dataset.csv  synthetic_labels_64_sum.csv  synthetic_labels_8_dataset.csv  synthetic_labels_8_sum.csv  xgboost_dataset.csv  xgboost_sum.csv
